correction des derniers bugs et nettoyage

--- a/MiniPoll/app/src/main/res/layout/activity_create.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_create.xml
@@ -23,29 +23,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/create_questionnary_btn"
-        style="@style/main_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:onClick="createQuestionnary"
-        android:text="@string/create_main_questionnary_title"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_agreement_btn" />
-
-    <Button
         android:id="@+id/create_help_btn"
         style="@style/main_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:onClick="createHelp"
         android:text="@string/create_main_help_title"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_questionnary_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/create_agreement_btn" />
 
 </android.support.constraint.ConstraintLayout>
