--- a/MiniPoll/app/src/main/res/layout/activity_creation_help.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_creation_help.xml
@@ -14,12 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
+        android:layout_marginTop="148dp"
         android:text="@string/create_help_friends_title"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="5dp" />
 
     <Spinner
         android:id="@+id/create_help_friend_spinner"
@@ -33,42 +32,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_help_friend_txt" />
 
-    <TextView
-        android:id="@+id/create_help_format_txt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:text="@string/create_format_title"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        app:layout_constraintTop_toTopOf="@+id/create_help_friend_spinner" />
-
-    <Spinner
-        android:id="@+id/create_help_format_spinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:prompt="@string/app_user_username"
-        android:spinnerMode="dropdown"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_help_format_txt" />
-
     <Button
         android:id="@+id/create_help_f_btn"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="112dp"
         android:drawableEnd="@drawable/ic_go"
         android:drawableRight="@drawable/ic_go"
         android:onClick="next"
         android:text="@string/app_next"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_help_format_spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/create_help_friend_spinner" />
 
 </android.support.constraint.ConstraintLayout>
