--- a/MiniPoll/app/src/main/res/layout/activity_login.xml
+++ b/MiniPoll/app/src/main/res/layout/activity_login.xml
@@ -90,15 +90,12 @@
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
-        android:layout_width="376dp"
+        android:layout_width="match_parent"
         android:layout_height="54dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="184dp"
+        android:layout_marginTop="180dp"
         android:text="@string/login_label"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
